# Uses meson to build the solutions
# meson setup build_
# meson compile -C build_ 1
# echo '<input>' | ./build_/1
# meson setup --reconfigure build_

project('advent2015', 'cpp',
  version : '0.1',
  default_options : ['warning_level=3', 'cpp_std=c++20'])

executable('1',
    '1.cpp',
    dependencies: [])

executable('2',
    '2.cpp',
    dependencies: [])

executable('3',
    '3.cpp',
    dependencies: [])