# Uses meson to build the solutions
# meson setup build_
# meson compile -C build_ 1
# echo '<input>' | ./build_/1
# meson setup --reconfigure build_
# or meson setup --reconfigure build_ --buildtype=debug (for debug builds)


project('advent2023', 'cpp',
  version : '0.1',
  default_options : ['warning_level=3', 'cpp_std=c++20', 'b_ndebug=if-release', 'optimization=g'])

executable('1',
    '1.cpp',
    dependencies: [])

executable('2',
    '2.cpp',
    dependencies: [])

executable('3',
    '3.cpp',
    dependencies: [])

executable('4',
    '4.cpp',
    dependencies: [])

executable('5',
    '5.cpp',
    dependencies: [])

executable('6',
    '6.cpp',
    dependencies: [])

executable('7',
    '7.cpp',
    dependencies: [])

executable('8',
    '8.cpp',
    dependencies: [])

executable('9',
    '9.cpp',
    dependencies: [])

executable('10',
    '10.cpp',
    dependencies: [])

# requires g++ 13 or above for c++17 full support
# reconfigure project with `CXX=/usr/bin/g++-13 meson setup --wipe build_`
executable('11',
    '11.cpp',
    dependencies: [])